--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 #loader{
     color:darkblue;
     position: fixed;
@@ -14,6 +21,7 @@
     height: 100vh;
     background:lightgray;
 }
+
 
 main{
     width: 90%;
