--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,26 @@
     background:lightgray;
 }
 
-
-main{
-    width: 90%;
-    margin: auto;
+#entete{
+  background-color: rgb(255, 0, 0);
+  display: flex;
+  align-items:end;
+  justify-content: center;
 }
+
+
+
+body{
+  background-color: black
+}
+main{
+    width: 95%;
+    display: flex;
+    background-color: lightgray;
+    padding: 5px;
+
+}
+
 
 @keyframes Disparition {
     0% {
