--- a/css/style.css
+++ b/css/style.css
@@ -30,16 +30,30 @@
 }
 
 
+section {
+  display: flex;
+  justify-content: center;
+  border: 2px solid darkslategray;
+  border-radius: 12px;
+  background-color: rgb(164, 223, 243);
+  padding: 5px;
+  margin: 10px;
+  width:30%;
+}
+
 
 body{
-  background-color: black
+  margin: auto;
+  background-color: black;
 }
-main{
-    width: 95%;
+
+main {
+    justify-content: space-around;
     display: flex;
     background-color: lightgray;
+    width: 98%;
+    margin: auto;
     padding: 5px;
-
 }
 
 
