--- a/css/style copy.css
+++ b/css/style copy.css
@@ -64,7 +64,7 @@ header{
   background: rgba(0, 0, 0);
 }
 
-div{
+#text{
   display: flex;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.5);
