--- a/css/style copy.css
+++ b/css/style copy.css
@@ -5,7 +5,7 @@
 }
 
 .img_header{
-  max-width:100px ;
+  max-width:200px ;
 }
 #loader{
     color:darkblue;
@@ -40,7 +40,7 @@
   justify-content: end;
 }
 #Main_Header{
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding: 10px;
   color: azure;
   display: flex;
   align-items: center;
@@ -63,7 +63,10 @@ header{
   
   background: rgba(0, 0, 0);
 }
-
+div{
+  display: flex;
+  justify-content: center;
+}
 #text{
   display: flex;
   justify-content: center;
@@ -137,8 +140,19 @@ header{
   display: grid;
   grid-template-columns: 50% 50%;
 }
-* {
-  box-sizing: border-box;
+#Sound{
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+}
+#Sound_Img_Div{
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+#Sound_Img{
+  width: 50%;
 }
 #YTB{
   
@@ -157,3 +171,73 @@ header{
       visibility: hidden;
     }
   }
+
+.nav-mobile {
+  left: 0%;
+    position: absolute;
+    background: #000000;
+    width: 100%;
+    z-index: 1;
+   }
+.nav-mobile a {
+  color: #fff;
+  padding: 1rem 1.5rem ;
+  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+   }
+.nav-mobile {
+    display: none;
+   }
+
+#check:checked ~ .nav-mobile {
+    display: block;
+   }
+.checkbtn {
+    font-size: 1.5rem;
+    color: white;
+    cursor: pointer;
+   }
+
+  #burger {
+    padding: 1.5rem 2rem;
+    background-color: #222831;
+    color: #fff;
+   }
+label{
+  display:none;
+}
+input{
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  #Navigation{
+    display: none;
+  
+  }
+  #Main_Header{
+    display: none;
+  }
+    #header {
+      .checkbtn {
+        display: block;
+        font-size: 5rem;
+        top: 30px;
+        }
+       .nav-mobile {
+        top: 160px;
+        width: 100%;
+        }
+       .nav-mobile a {
+        font-size: 2rem;
+        }
+       }
+      
+
+    }
+  
+    *{
+      font-family:'Poppins';
+    }
