--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ div {
 }
 
 #Main_Jeu {
-  background-image: url(/images/image_1.jpg);
+  background-image: url(./images/image_1.jpg);
 
   background-position: center;
   background-repeat: no-repeat;
