--- a/style.css
+++ b/style.css
@@ -120,12 +120,7 @@ div {
 }
 
 #Main_Accueil {
-  display: grid;
-  grid-template-columns: 40% 60%;
-  grid-template-rows: 1fr 1fr;
-
-
-  border-radius: 8px;
+  display: flex;
   margin: 5% 5%;
 }
 
@@ -191,7 +186,9 @@ div {
   }
 }
 
-#Burger { display: none; }
+#Burger { 
+  display: none; 
+}
 
 
 .nav-mobile {
@@ -244,8 +241,11 @@ input {
     display: none;
 
   }
+  #Burger{
+    display:block;
+  }
 
-  #Main_Header {
+  #Main_Header:first-child {
     display: none;
   }
 
@@ -264,6 +264,14 @@ input {
     .nav-mobile a {
       font-size: 2rem;
     }
+  }
+  
+  #Main_Accueil {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 5% 5% 5%; 
   }
 
 
