--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Poppins';
 }
+
 
 .img_header {
   max-width: 200px;
@@ -72,9 +74,29 @@ div {
 }
 
 .paragraphe {
-  color: bisque;
+  color:white;
+  font-size: large;
 }
 
+h2{
+  font-size:xx-large;
+  color: bisque;
+  margin-bottom: 20px;
+}
+
+footer nav p {
+  text-align: center;
+  color: white;
+  margin: 50px;
+}
+#Jeu_Text{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 50px;
+  
+}
 .title {
   display: flex;
   justify-content: center;
@@ -94,28 +116,20 @@ div {
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: 1fr 1fr 1fr;
-  width: 95%;
-  max-width: 100vw;
   margin-block: 0.5%;
-  /* Largeur maximale de la viewport */
-  gap: 10px;
 }
 
 #Jeu_Board img {
   width: 100%;
   height: 100%;
   object-fit: contain;
-  /* Garde les proportions de l'image */
-  max-width: 100%;
-  max-height: 100%;
 }
 
 #Board_Container {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  margin: auto;
+  margin: 20px 50px;
 
 }
 
@@ -129,12 +143,14 @@ div {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
+  margin: 50px 10% 0px;
+}
+#Under_Main_Jeu *{
+  text-align: center;
 }
 
 #Main_Jeu {
   background-image: url(./images/image_1.jpg);
-
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -150,10 +166,11 @@ div {
   grid-template-columns: 50% 50%;
 }
 
-#Sound {
+#Jeu_Soundtrack div {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-left:25% ;
 }
 
 #Sound_Img_Div {
@@ -168,7 +185,6 @@ div {
 }
 
 #YTB {
-
   border: 3px solid #f1f1f1;
   width: 80%;
   height: 800px;
@@ -274,12 +290,16 @@ input {
     margin: 5% 5% 5%; 
   }
 
+#Main_Jeu {
+  height: 500px;
+}
+
+#YTB{
+  height: 300px;
+}
 
 }
 
-* {
-  font-family: 'Poppins';
-}
 
 #Carousel {
   display: flex;
@@ -290,16 +310,14 @@ input {
 
 .carousel {
   width: 100%;
-  max-width: 800px;
-  height: 500px;
+  max-width: 70%;
   overflow: hidden;
   border-radius: 10px;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 10px 30px rgba(255, 228, 196, 0.2);
 }
 
 .carousel-slides {
   display: flex;
-  height: 100%;
   animation: slide 20s infinite ease-in-out;
 }
 
@@ -315,10 +333,8 @@ input {
   width: 100%;
   height: 100%;
   object-fit:fill;
-  background-color: #000;
 }
 
-/* Animation pour 5 images */
 @keyframes slide {
   0% {
     transform: translateX(200%);
@@ -365,11 +381,6 @@ input {
   }
 }
 
-@media (max-width: 768px) {
-  .carousel {
-    height: 300px;
-  }
-}
 
 
 
