--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/* ---------- Plusieurs les pages ---------- */
+
+
 * {
   margin: 0;
   padding: 0;
@@ -15,10 +18,39 @@ body {
   max-width: 100vw;
 }
 
-
-.img_header {
-  max-width: 200px;
+header {
+  border: 2px solid white;
+  background: rgba(0, 0, 0);
 }
+
+div {
+  display: flex;
+  justify-content: center;
+}
+
+h2 {
+  font-size: xx-large;
+  color: bisque;
+  margin-bottom: 20px;
+}
+
+footer nav p {
+  text-align: center;
+  color: white;
+  margin-top: 30px;
+}
+
+.paragraphe {
+  color: white;
+  font-size: large;
+  text-align: center;
+}
+
+
+
+/* ---------- Animations Loader ---------- */
+
+
 
 #loader {
   display: flex;
@@ -37,6 +69,7 @@ body {
   height: 100vh;
   background: rgb(85, 58, 46);
 }
+
 #loader div {
   border: 3px solid #ff3c3c38;
   border-top-color: #ff3c3c;
@@ -45,9 +78,10 @@ body {
   height: 3em;
   animation: spin 1s linear infinite;
 }
+
 #loader p {
   color: Bisque;
-  font-size:xx-large;
+  font-size: xx-large;
   margin-bottom: 30px;
 }
 
@@ -57,10 +91,37 @@ body {
   }
 }
 
+@keyframes Disparition {
+  0% {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  70% {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+
+
+/* ---------- Header sur toutes les pages ---------- */
+
+
+
 #header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.img_header {
+  max-width: 200px;
 }
 
 #First {
@@ -99,22 +160,60 @@ body {
   transition: filter 0.3s, transform 0.3s;
 }
 
-
 #First div nav {
   color: azure;
   display: flex;
   align-items: center;
 }
 
-header {
-  border: 2px solid white;
-  background: rgba(0, 0, 0);
+.nav-mobile {
+  left: 0%;
+  position: absolute;
+  background: #000000;
+  width: 100%;
+  z-index: 1;
 }
 
-div {
+.nav-mobile a {
+  color: #c0c0c0;
+  padding: 1rem 1.5rem;
+  display: block;
   display: flex;
+  align-items: center;
   justify-content: center;
 }
+
+#Burger {
+  display: none;
+}
+
+.nav-mobile {
+  display: none;
+}
+
+#check:checked~.nav-mobile {
+  display: block;
+}
+
+.checkbtn {
+  font-size: 1.5rem;
+  color: white;
+}
+
+
+label {
+  display: none;
+}
+
+input {
+  display: none;
+}
+
+
+
+/* ---------- Page index ---------- */
+
+
 
 #text {
   display: flex;
@@ -122,22 +221,6 @@ div {
   background-color: rgba(0, 0, 0, 0.5);
   border: 2px solid;
   border-radius: 8px;
-
-}
-
-
-
-
-.paragraphe {
-  color: white;
-  font-size: large;
-  text-align: center;
-}
-
-h2 {
-  font-size: xx-large;
-  color: bisque;
-  margin-bottom: 20px;
 }
 
 #Acceuil_footer {
@@ -147,11 +230,16 @@ h2 {
   left: 0;
 }
 
-footer nav p {
-  text-align: center;
-  color: white;
-  margin-top: 30px;
+#Main_Accueil {
+  display: flex;
+  margin: 5% 5%;
 }
+
+
+
+/* ---------- Page Sujet ---------- */
+
+
 
 .Jeu_Text {
   display: flex;
@@ -160,11 +248,6 @@ footer nav p {
   align-items: center;
   margin: 50px;
 
-}
-
-.title {
-  display: flex;
-  justify-content: center;
 }
 
 #Accueil {
@@ -200,10 +283,6 @@ footer nav p {
   margin: 20px 50px;
 }
 
-#Main_Accueil {
-  display: flex;
-  margin: 5% 5%;
-}
 
 #Under_Main_Jeu {
   display: flex;
@@ -265,65 +344,12 @@ footer nav p {
   height: 800px;
 }
 
-
-
-
-
-.nav-mobile {
-  left: 0%;
-  position: absolute;
-  background: #000000;
-  width: 100%;
-  z-index: 1;
-}
-
-.nav-mobile a {
-  color: #c0c0c0;
-  padding: 1rem 1.5rem;
-  display: block;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-#Burger {
-  display: none;
-}
-
-
-.nav-mobile {
-  display: none;
-}
-
-#check:checked~.nav-mobile {
-  display: block;
-}
-
-.checkbtn {
-  font-size: 1.5rem;
-  color: white;
-}
-
-
-label {
-  display: none;
-}
-
-input {
-  display: none;
-}
-
-
-
-
 #Carousel {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 40px 0;
 }
-
-
 
 .carousel {
   width: 100%;
@@ -351,24 +377,6 @@ input {
   height: 100%;
   object-fit: fill;
 }
-
-@keyframes Disparition {
-  0% {
-    opacity: 1;
-    visibility: visible;
-  }
-
-  70% {
-    opacity: 1;
-    visibility: visible;
-  }
-
-  100% {
-    opacity: 0;
-    visibility: hidden;
-  }
-}
-
 
 @keyframes slide {
   0% {
@@ -415,6 +423,11 @@ input {
     transform: translateX(200%);
   }
 }
+
+
+
+/* ---------- Responsive ---------- */
+
 
 
 @media screen and (max-width: 768px) {
@@ -473,7 +486,7 @@ input {
       font-size: 2rem;
     }
   }
-}
+
 
   #Main_Accueil section {
     display: flex;
@@ -495,17 +508,16 @@ input {
   }
 
   #Board_Container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 10px;
-}
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+  }
 
   #Jeu_Board {
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 1fr;
-    
   }
 
   .Jeu_Text {
@@ -514,7 +526,6 @@ input {
     justify-content: center;
     align-items: center;
     margin: 10px;
-
   }
 
   #Jeu_Soundtrack {
@@ -528,24 +539,20 @@ input {
     margin-left: 0%;
     margin-bottom: 50px;
   }
+
   #Jeu_Soundtrack div:nth-child(1) p {
     margin: 20px;
   }
 
-  #moi{
-    display: flex;
-    flex-direction: column;
-  }
-  .parcours div{
+  #moi {
     display: flex;
     flex-direction: column;
   }
 
-
-
-
-
-
+  .parcours div {
+    display: flex;
+    flex-direction: column;
+  }
 
 }
 
@@ -558,6 +565,10 @@ input {
 
 
 }
+
+
+
+/* ---------- Page Auteur ---------- */
 
 
 
@@ -607,12 +618,9 @@ input {
   text-align: center;
 }
 
-
-
 #interet {
   padding: 80px 10%;
   background: linear-gradient(190deg, #c54534 0%, #351b15 100%);
-
 }
 
 #interet h2 {
@@ -624,9 +632,10 @@ input {
 
 .interet {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 30px;
 }
+
 .interet div {
   background: #3b3b3b;
   padding: 40px;
@@ -653,7 +662,6 @@ input {
   color: #c0c0c0;
   font-size: 1rem;
 }
-
 
 #Parcours {
   padding: 80px 10%;
